--- 2.2.6 2012-02-19 ---
*** common changes ***
* Thanks to Konstantinos Georgokitsos the Greek translation is now available.
* Thanks to Stefano Simoncelli the Italian translation is now available.
*** eiskaltdcpp-qt ***
*** eiskaltdcpp-gtk ***
*** eiskaltdcpp-daemon ***
*** eiskaltdcpp-cli ***

--- 2.2.5 2011-12-25 ---
*** common changes ***
* Reorganized the source tree.
* Added ZLIF support into core.
* Added core settings: UseADLOnlyOnOwnList, AllowUploadOverMultiHubs,
  AllowSimUploads.
* Added ability to build the program with miniupnpc version 1.6. Support
  for version 1.5 saved. The local copy of miniupnpc is updated to version 1.6.
* Fixed program crash when using of changed value of IpTOSValue (default -1)
  without root privileges.
* Added recognition of additional fields from file lists of FlylinkDC++:
  bitrate audio, video and resolution.
* Cleanup of code, small optimizations.
* Small improvements for Lua scripts support in MS Windows.
* Fixed build with Boost >= 1.48.
* Transifex web service is used for translators now:
  http://code.google.com/p/eiskaltdc/wiki/MakingTranslations
  https://www.transifex.net/projects/p/eiskaltdcpp/
*** eiskaltdcpp-qt ***
* Refactoring of source code. Regressions are possible.
* Now GCC >= 4.5.0 is required for build. (Features from C++11 are used)
* Fixed build in Haiku OS. System algorithm to test run only one instance
  of the program is used now.
* A lot of new methods are now available using QtScript. See:
  http://code.google.com/p/eiskaltdc/wiki/Scripting
  http://code.google.com/p/eiskaltdc/wiki/Scripting_QtScript_Example_Scripts
  http://code.google.com/p/eiskaltdc/wiki/Scripting_Working_With_QtScript
  [Thanks to OmegaPhil for an updated documentation]
* Hot reloading of scripts (QtScript) when they have been changed.
* Dialog of scripting (QtScript) is appreciably improved.
* Improved method of sorting in Search Spy widget.
  [Thanks to Mikhail Krasikau]