@@ -20,6 +20,9 @@ Run program as daemon
 .BR "\-v",  \-\-verbose"
 Verbose mode
 .TP
+.BR "\-D",  \-\-debug"
+Debug mode
+.TP
 .BR "\-P <port>",  \-\-port=<port>"
 Set port for XMLRPC or JSONRPC (default: 3121)
 .TP
