@@ -42,6 +42,10 @@ Run program as daemon
 
 <DD>
 Verbose mode
+<DT><B>-D,</B>--debug
+
+<DD>
+Debug mode
 <DT><B>-P &lt;port&gt;,</B>--port=&lt;port&gt;
 
 <DD>
@@ -134,6 +138,6 @@ This manual page was written by Boris Pek &lt;<A HREF="mailto:tehnick-8@mail.ru"
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 00:25:36 GMT, November 27, 2011
+Time: 20:53:09 GMT, February 19, 2012
 </BODY>
 </HTML>
